rename main in package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "moonitor",
   "version": "1.0.0",
   "description": "serverless telegram bot on cf workers to monitor a cryptocurrency address",
-  "main": "index.js",
+  "main": "worker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
