--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/worker.mjs",
   "module": "./dist/worker.mjs",
   "scripts": {
-    "build": "node build.js",
+    "build": "esbuild --bundle --sourcemap --format=esm --minify --outfile=dist/worker.mjs ./src/worker.ts",
     "dev": "miniflare --watch --debug"
   },
   "author": "codebam",
