--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "author": "codebam",
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
-    "miniflare": "^2.3.0",
-    "prettier": "^1.18.2"
-  },
-  "dependencies": {
     "@cloudflare/workers-types": "^3.4.0",
     "esbuild": "^0.14.22",
+    "miniflare": "^2.3.0",
+    "prettier": "^1.18.2",
     "typescript": "^4.5.5"
   }
 }
