--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
               SECRET_TELEGRAM_API_TOKEN
             environment: production
           env:
-            CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+            SECRET_TELEGRAM_API_TOKEN: ${{ secrets.SECRET_TELEGRAM_API_TOKEN }}
