--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
   "module": "./dist/worker.mjs",
   "scripts": {
     "build": "esbuild --bundle --sourcemap --format=esm --minify --outfile=dist/worker.mjs ./src/worker.ts",
+    "lint": "eslint src",
     "dev": "miniflare --watch --debug"
   },
   "author": "codebam",
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "esbuild": "^0.14.22",
+    "eslint": "^8.9.0",
     "miniflare": "^2.3.0",
     "prettier": "^1.18.2",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "core-js-pure": "^3.21.1"
   }
 }
