broken request no json

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "(MIT OR Apache-2.0)",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.4.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "core-js-pure": "^3.21.1",
+    "crypto-js": "^4.1.1",
     "uuid": "^8.3.2"
   }
 }
