--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "esbuild": "^0.14.22",
     "eslint": "^8.9.0",
+    "jest": "^27.5.1",
     "miniflare": "^2.3.0",
     "prettier": "^1.18.2",
     "typescript": "^4.5.5"
