--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,9 +13,8 @@ jobs:
         with:
           node-version: latest
           registry-url: https://registry.npmjs.org/
-      - run: |
-          npm install
-          npm run build
-          npm run publish
+      - run: npm i
+      - run: npm ci
+      - run: npm run publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
