--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -11,7 +11,7 @@
 		"lint": "eslint src"
 	},
 	"author": "codebam",
-	"license": "(MIT OR Apache-2.0)",
+	"license": "Apache-2.0",
 	"dependencies": {
 		"main": "*"
 	},
